--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,12 @@ h1.title {
     font-size: 40px;
 }
 
+.title img{
+    width: 54px;
+    margin-bottom: -13px;
+    padding-right: 20px;
+}
+
 a {
     color: red;
     text-decoration: none;
