--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ h1.title {
     font-size: 40px;
 }
 
-.title img{
+h1.title img{
     width: 54px;
     margin-bottom: -13px;
     padding-right: 20px;
