--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ body {
     float: left;
     margin: 90px 0px;
     position: fixed;
+    padding-left: 25px;
 }
 
 /* ==========================================================================
@@ -73,6 +74,7 @@ span.article-title::after {
 
 h1.title {
     font-size: 40px;
+    padding-left: 20px;
 }
 
 a {
