--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ html {
 body {
     max-width: 1000px;
     margin: 0 auto;
-    font-family: "proxima-nova",sans-serif;
+    font-family: "acumin-pro",sans-serif;
 }
 
 /* =======
